lab1/hardware/mixed_approach/mixed_approach.sdk/.metadata/.plugins/org.eclipse.cdt.ui/lab1_mixed.build.log
12:45:06 **** Incremental Build of configuration Debug for project lab1_mixed ****
make all 
Building file: ../src/helloworld.c
Invoking: ARM gcc compiler
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -I../../lab1_mixed_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.d" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'main':
../src/helloworld.c:36:26: error: 'XPAR_XPOS_DEVICE_ID' undeclared (first use in this function)
  XGpio_Initialize(&xpos, XPAR_XPOS_DEVICE_ID);
                          ^
../src/helloworld.c:36:26: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/helloworld.o] Error 1

12:45:07 Build Finished (took 1s.140ms)

